--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <footer class="bg-slate-800 text-white text-center p-4">
-        <p class="text-sm">Made with by <a href="umendrabisen2005@gmail.com" target="_blank" class="text-blue-500">Umendra Bisen</a></p>
+        <p class="text-sm">Made with by <a href="https://www.linkedin.com/in/umendra-bisen-96bb56253" target="_blank" class="text-blue-500">Umendra Bisen</a></p>
     </footer>
 </body>
 <script>
